feat: Implement data loading, types, and initial API startup. Implements the core logic for the in-memory server.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "rootDir": ".",
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true
   },
-  "include": ["src/**/*.ts", "scr/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/*.ts",
+    "./"
+  ]
 }
