--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,15 @@
 {
   "name": "backend",
   "version": "0.0.1",
+  "type": "module",
   "description": "Server to serve API for access to impressions data , loaded from csv file and set into specific data structures for easy access",
   "main": "server.ts",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "ts-node src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -23,16 +28,20 @@
     "fastify": "^5.6.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
     "vitest": "^4.0.3"
   }
 }
