--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,10 +38,8 @@
     "msw": "^2.11.6",
     "prettier": "^3.6.2",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.12"
   },
   "msw": {
     "workerDirectory": [
