--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@turf/turf": "^7.2.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
